--- a/index.html
+++ b/index.html
@@ -9,22 +9,17 @@
 
 <body>
 
+<script src="JS/practicum_2_lesson.js"></script>
 
+<script src="JS/practicum_3_lesson.js"></script>
 
-    <script src="JS/task_3.js" defer></script>
+<script src="JS/task_1.js" defer></script>
 
-    <script src="JS/task_4.js" defer></script>
+<script src="JS/task_2.js" defer></script>
 
-    <script src="JS/task_5.js" defer></script>
+<script src="JS/task_3.js" defer></script>
 
-    <script src="JS/task_6.js" defer></script>
-
-    <script src="JS/task_7.js" defer></script>
-
-    <script src="JS/task_8.js" defer></script>
-
-
-
+<script src="JS/task_4.js" defer></script>
 
 
 </body>
